java/1.2/modules/ROOT/pages/java-reference.adoc
= Java Module Reference - Mule 4
:page-aliases: connectors::java/java-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Java Module v1.2

Java Module is used to invoke Java code.

Release Notes: xref:release-notes::connector/java-module.adoc[Java Module Release Notes]

== Configurations
---
[[config]]
=== Default Configuration

Default configuration

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
|===

== Operations

* <<invoke>>
* <<invokeStatic>>
* <<new>>
* <<validateType>>

[[invoke]]
=== Invoke

`<java:invoke>`

Invoke methods with the provided arguments in an instance. The identifier of the method to invoke includes the class and method names, being the method a full description of its signature including the types of each parameter.

For example, to invoke the `echo` method with the signature `public String echo(String msg)` that belongs to `Class org.bar.Me`, then the identifier of the method is `echo(String)`.

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Instance a| Any |  The instance on which the method is invoked. |  | x
| Args a| Object |  The arguments used to invoke a method. |  |
| Class a| String |  Represents the fully qualified name of the class containing the referenced method. |  | x
| Method a| String |  Represents the method signature containing the method name and its argument types. For example, for the method with signature, `public String log(String msg, boolean verbose)`, then the identifier of the method is `log(String, boolean)` |  | x
| Target Variable a| String |  The name of a variable in which to place the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output, and to store the outcome of that expression in the target variable. |  #[payload] |
|===

==== Output

[cols=".^50%,.^50%"]
|===
| *Type* a| Any
|===

==== Throws

* JAVA:ARGUMENTS_MISMATCH
* JAVA:CLASS_NOT_FOUND
* JAVA:INVOCATION
* JAVA:NO_SUCH_METHOD
* JAVA:WRONG_INSTANCE_CLASS


[[invokeStatic]]
=== Invoke Static

`<java:invoke-static>`

Operation that allows the user to invoke static methods with the provided arguments. The identifier of the method to be invoked includes the class and method names, being the method a full description of its signature including the types of each parameter.

For example, to invoke the static method `echo` with signature `public static String echo(String msg)` that belongs to `Class org.bar.Me`, then the identifier of the method is `echo(String)`.

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Args a| Object |  The arguments used to invoke the given Method. |  |
| Class a| String |  Represents the fully qualified name of the Class containing the referenced Method. |  | x
| Method a| String |  Represents the Method signature containing the method name and its argument types. For example, for the method with signature `public static String log(String msg, boolean verbose)`, then the identifier of the method is `log(String, boolean)`. |  | x
| Target Variable a| String |  The name of a variable in which to place the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output, and to store the outcome of that expression in the target variable. |  #[payload] |
|===

==== Output

[cols=".^50%,.^50%"]
|===
| *Type* a| Any
|===


==== Throws

* JAVA:CLASS_NOT_FOUND
* JAVA:ARGUMENTS_MISMATCH
* JAVA:INVOCATION
* JAVA:WRONG_INSTANCE_CLASS
* JAVA:NO_SUCH_METHOD


[[new]]
=== New

`<java:new>`

Create a new instance of a class.

The identifier of a Constructor includes the class and constructor names, and the constructor has a full description of its signature including the types of each parameter.

For example, to invoke the constructor `Me(String name, int age)` which belongs to the `org.bar.Me` class, then the identifier of the method is `Me(String,int)`.


==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Args a| Object |  The arguments used to invoke the given Constructor |  |
| Class a| String |  Represents the fully qualified name of the Class containing the referenced Method. |  | x
| Constructor a| String |  Represents the Constructor signature that contains the name and its argument types. For example, for the Constructor with the `public Me(String name, Integer age)` signature, then the identifier of the method is `Me(String, Integer)`. |  | x
| Target Variable a| String |  The name of a variable in which to place the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output, and to store the outcome of that expression in the target variable. |  #[payload] |
|===

==== Output

[cols=".^50%,.^50%"]
|===
| *Type* a| Any
|===


==== Throws

* JAVA:ARGUMENTS_MISMATCH
* JAVA:CLASS_NOT_FOUND
* JAVA:NO_SUCH_CONSTRUCTOR
* JAVA:NOT_INSTANTIABLE_TYPE


[[validateType]]
=== Validate Type
`<java:validate-type>`


Validate that an instance is an `instanceof` a class.


==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Class a| String |  |  |
| Instance a| Any |  The object whose type is expected to be an instanceof of a class. |  | x
| Accept Subtypes a| Boolean |  Whether or not to accept subtypes of a class, or if the instance has to be of the exact same class. |  true |
|===

==== Throws

* JAVA:CLASS_NOT_FOUND
* JAVA:WRONG_INSTANCE_CLASS

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
